# VLAS-Intake

./: .bumpversion.toml  .dockerignore  .env.dist  .gitignore  Dockerfile  README.md  Taskfile.yml  bot.py  compose.yml  fly.toml  intake_nodes.py  pcc-deploy.toml  prek.toml  pyproject.toml  server.py  taskfile.yaml  tests.py
client/python/: README.md  client.py  scripts.yml  test_manager.py
client/typescript/: .env.dist  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
client/typescript/src/: app.js  app.ts  style.css
scripts/: probe_daily_dialin_webhook.py  send_dialpad_sms.py
src/intake_bot/: __init__.py  bot.py  env_var.py  intake_arg_models.py  intake_nodes.py  intake_results.py  intake_utils.py  intake_validator.py  legalserver.py  local_smart_turn.py  poverty.py  prompts.py  remote.py  security.py  server.py  twilio.py
src/intake_bot/data/: asset_exemptions.yml  classifier_prompts.yml  federal_poverty_scale.json  fetch_taxonomy.csv  income_categories.yaml  legal_problem_codes.txt  node_prompts.yml  prompts.yaml  prompts.yml  reference_data.yml  referral_content.yml  service_areas.txt  service_areas.yaml
src/intake_bot/models/: classifier.py  intake_flow_result.py  legalserver.py  results.py  telephony.py  validator.py  validators.py
src/intake_bot/nodes/: nodes.py  utils.py  validator.py
src/intake_bot/services/: classifier.py  dialpad.py  legalserver.py  phonenumber.py  poverty.py  reference_data.py
src/intake_bot/utils/: daily_dialin.py  ev.py  globals.py  local_smart_turn.py  node_prompts.py  prompts.py  security.py  twilio.py
src/intake_bot/validator/: development.py  phone_number.py  poverty.py  validator.py
templates/: streams.xml
tests/: test_bot_idle.py  test_classifier.py  test_client_test_manager.py  test_daily_dialin.py  test_dialpad.py  test_intake_nodes.py  test_intake_validator.py  test_legalserver.py  test_models_validators.py  test_nodes_nodes.py  test_remotesystem.py  test_security.py  test_server.py  test_utils_ev.py  test_utils_security.py  test_validator_validator.py
