[project]
dependencies = [
  "aiohttp>=3.13.3",
  "loguru>=0.7.3",
  "phonenumberslite>=9.0.26",
  "pipecat-ai-flows>=0.0.24",
  "pipecat-ai[azure,daily,rnnoise,runner,silero,webrtc]>=0.0.107",
  "pipecatcloud>=0.3.1",
  "python-dotenv>=1.2.2",
  "pyyaml>=6.0.3",
  "rapidfuzz>=3.14.3",
]
description = "Virginia Legal Aid Society (VLAS) Telephone Intake Bot"
name = "intake-bot"
readme = "README.md"
requires-python = ">=3.12"
version = "0.9.0"

[dependency-groups]
dev = [
  "fastapi>=0.135.2",
  "pipecat-ai-cli>=0.2.4",
  "pipecat-ai-tail>=0.0.4",
  "pipecat-ai-whisker>=0.0.11",
  "pipecat-ai[websocket]>=0.0.107",
  "pytest-asyncio>=1.3.0",
  "pytest>=9.0.2",
  "uvicorn>=0.42.0",
]
test = ["pytest-asyncio>=1.3.0", "pytest>=9.0.2"]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
intake_bot = ["data/*.yml"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:pipecat"]
minversion = "8.0"
pythonpath = ["src"]
required_plugins = ["pytest-asyncio"]
testpaths = ["tests"]
