[project]
  dependencies = [
    "aiohttp>=3.13.5",
    "loguru>=0.7.3",
    "phonenumberslite>=9.0.28",
    "pipecat-ai-flows>=1.0.0",
    "pipecat-ai[azure,daily,rnnoise,runner,silero,webrtc]>=1.0.0",
    "pipecatcloud>=0.5.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.5",
  ]
  description = "Virginia Legal Aid Society (VLAS) Telephone Intake Bot"
  name = "intake-bot"
  readme = "README.md"
  requires-python = ">=3.12"
  version = "0.9.1"

[dependency-groups]
  dev = [
    "fastapi>=0.136.0",
    "pipecat-ai-cli>=1.0.1",
    "pipecat-ai-tail>=0.0.5",
    "pipecat-ai-whisker>=1.0.0",
    "pipecat-ai[websocket]>=1.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest>=9.0.3",
    "uvicorn>=0.44.0",
  ]
  test = ["pytest-asyncio>=1.3.0", "pytest>=9.0.3"]

[build-system]
  build-backend = "setuptools.build_meta"
  requires      = ["setuptools"]

[tool.setuptools.packages.find]
  where = ["src"]

[tool.setuptools.package-data]
  intake_bot = ["data/*.yml"]

[tool.pytest.ini_options]
  filterwarnings   = ["ignore::DeprecationWarning:pipecat"]
  minversion       = "8.0"
  pythonpath       = ["src"]
  required_plugins = ["pytest-asyncio"]
  testpaths        = ["tests"]
